# cvtesttask

./: .gitignore  CMakeLists.txt  buildandinstall.sh  main.cpp
Video/json/: Test_2.json  Test_21.json  Test_3.json  Test_4.json  Test_46.json  Test_47.json  Test_48.json  Test_5.json  Test_6.json
Video/json_output/: Test_2.json  Test_21.json  Test_3.json  Test_4.json  Test_46.json  Test_47.json  Test_48.json  Test_5.json  Test_6.json
lib/: dav_class.h
